--- a/public/less/mobile/public.less
+++ b/public/less/mobile/public.less
@@ -51,3 +51,30 @@ body{
     }
   }
 }
+
+.qty-box{
+  border: 1px solid #bbb;
+  border-radius: 3px;
+  width: 88px;
+  height: 26px;
+  line-height: 26px;
+  text-align: center;
+  margin-bottom: 10px;
+  .num-reduce,.num-input,.num-add{
+    width: 28px;
+    border: none;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+  .num-input{
+    display: inline-block;
+    border-left: 1px solid #bbb;
+    border-right: 1px solid #bbb;
+  }
+  .num-add{
+    font-size: 16px;
+    color: #ed4566;
+  }
+}
