--- a/public/less/mobile/cart.less
+++ b/public/less/mobile/cart.less
@@ -1,5 +1,5 @@
 .cart{
-  header{
+  header.bar-nav{
     background: #fafafa;
     border-bottom: 1px solid #c9c7c8;
   }
@@ -9,5 +9,100 @@
     height: 100%;
     font-size: 1rem;
     color: #5e5e5e;
+    float: left;
+  }
+  .cart-goods{
+    padding: 10px;
+  }
+  .ui-list{
+    background: #fff;
+  }
+  .ui-list-item{
+    position: relative;
+    min-height: 4.1rem;
+    padding: 0.5rem 0.25rem 0.5rem 2rem;
+    display: -webkit-box;
+    display: box;
+    .ui-checkbox{
+      position: absolute;
+      left: 0.25rem;
+      top: 40%;
+    }
+  }
+  .cart-goods-pic{
+    float: left;
+    width: 3.1rem;
+    height: 3.1rem;
+    padding: 2px;
+    border: 1px solid #e2e2e2;
+    position: relative;
+    img{
+      width: 2.8rem;
+      height: 2.8rem;
+      vertical-align: middle;
+    }
+  }
+  .cart-goods-des{
+    -webkit-box-flex:1;
+    box-flex: 1;
+    padding: 0 0.5rem;
+  }
+  .cart-goods-price{
+    width: 1.9rem;
+    text-align: right;
+    position: relative;
+  }
+  .cart-goods-dustbin{
+    display: block;
+    position: absolute;
+    bottom: 0.4rem;
+    right: 0;
+  }
+  .cart-goods-name{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    margin-top: -3px;
+    height: 0.85rem;
+  }
+  .cart-goods-sku{
+    font-size: 0.5rem;
+    color: #999;
+    height: 1rem;
+  }
+
+}
+.cart-checkout{
+  position: absolute;
+  bottom: 0;
+  background: #fff;
+  width: 100%;
+  height: 2.5rem;
+  display: -webkit-box;
+  display: box;
+  border: 1px solid #d8d8d8;
+  padding: 0.5rem 0.75rem;
+  .cart-checkbox{
+    width: 28%;
+    line-height: 31px;
+    label{
+      margin-left: 5px;
+      vertical-align: middle;
+      font-size: 16px;
+    }
+  }
+  .cart-counter{
+    // -webkit-box-flex: 1;
+    // box-flex: 1;
+    line-height: 28px;
+    .total-price{
+      color: #ee4566;
+    }
+  }
+  .ui-btn-pink{
+    position: absolute;
+    top: 0.5rem;
+    right: 0.75rem;
+    padding: 6px 20px;
   }
 }
