modal plugin js

--- a/app/views/mobile/shoppingcart/index.jade
+++ b/app/views/mobile/shoppingcart/index.jade
@@ -24,7 +24,7 @@ block content
             p.cart-goods-price
               span.price #{product.price}
               a.cart-goods-dustbin(href="javascript:;")
-                i.icon.icon-remove
+                i.icon.icon-remove.j-remove
             input.ui-checkbox(type="checkbox")
     .footer.cart-checkout
       .cart-checkbox
@@ -35,6 +35,19 @@ block content
           | 总计：
           em.sum ￥0.00
       a.ui-btn-pink.ui-btn(href="javascript:;") 去结算
+    .ui-modal
+      .modal-content
+        p 确定要删除该商品吗
+      .action
+        span.ui-btn.ui-btn-white.cancle 取消
+        span.ui-btn.ui-btn-pink.confirm 确定
   //- script(src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js")
   //- script(src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js")
   //- script(src="/js/action.js")
+block scripts
+  script.
+    $(function(){
+      $('.ui-modal').Modal({
+        openbtn: '.j-remove'
+      });
+    })
