delete cart goods modal

--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -13,11 +13,11 @@
       .condiction.j-style(data-rules="single",data-type="color")
         label 颜色：
         each color in product.color
-          span #{color}
+          span.block #{color}
       .condiction.j-style(data-rules="single",data-type="size")
         label 尺寸
         each size in product.size
-          span #{size}
+          span.block #{size}
       .condiction
         label 数量：
         .qty-box
