--- a/public/less/mobile/add_to_cart.less
+++ b/public/less/mobile/add_to_cart.less
@@ -79,7 +79,7 @@
     label{
       display: block;
     }
-    span{
+    .block{
       display: inline-block;
       font-size: 12px;
       line-height: 26px;
