--- a/public/less/mobile/public.less
+++ b/public/less/mobile/public.less
@@ -119,3 +119,9 @@ input[type=checkbox],input[type=radio]{
     background-position: 0 0;
   }
 }
+
+.ui-confirm{
+  .action{
+    margin: 0rem;
+  }
+}
