--- a/public/less/mobile/modal.less
+++ b/public/less/mobile/modal.less
@@ -1,12 +1,23 @@
 .ui-modal{
+  display: none;
   width: 10.12rem;
   height: 4.3rem;
   background: #fff;
   border-radius: 3px;
+  padding: 0.5rem 0.25rem;
   position: fixed;
-  top: 50%;
-  left: 50%;
+  // top: 50%;
+  // left: 50%;
   -webkit-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
+  .content-p{
+    color: #333;
+    text-align: center;
+    padding: 0.5rem;
+  }
+  .action{
+    min-height: 34px;
+    text-align: center;
+  }
 }
