--- a/public/style/global.css
+++ b/public/style/global.css
@@ -192,6 +192,9 @@ input[type=radio] {
 .ui-radio:checked {
   background-position: 0 0;
 }
+.ui-confirm .action {
+  margin: 0rem;
+}
 header.bar.bar-nav {
   height: 2.1rem;
   padding: 0;
@@ -753,7 +756,7 @@ header.bar.bar-nav form .search-btn {
 .pop .condiction label {
   display: block;
 }
-.pop .condiction span {
+.pop .condiction .block {
   display: inline-block;
   font-size: 12px;
   line-height: 26px;
@@ -891,14 +894,23 @@ header.bar.bar-nav form .search-btn {
   padding: 6px 20px;
 }
 .ui-modal {
+  display: none;
   width: 10.12rem;
   height: 4.3rem;
   background: #fff;
   border-radius: 3px;
+  padding: 0.5rem 0.25rem;
   position: fixed;
-  top: 50%;
-  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+.ui-modal .content-p {
+  color: #333;
+  text-align: center;
+  padding: 0.5rem;
+}
+.ui-modal .action {
+  min-height: 34px;
+  text-align: center;
 }
