--- a/public/style/mobile/modal.css
+++ b/public/style/mobile/modal.css
@@ -1,12 +1,21 @@
 .ui-modal {
+  display: none;
   width: 10.12rem;
   height: 4.3rem;
   background: #fff;
   border-radius: 3px;
+  padding: 0.5rem 0.25rem;
   position: fixed;
-  top: 50%;
-  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+}
+.ui-modal .content-p {
+  color: #333;
+  text-align: center;
+  padding: 0.5rem;
+}
+.ui-modal .action {
+  min-height: 34px;
+  text-align: center;
 }
