--- a/public/less/mobile/cart.less
+++ b/public/less/mobile/cart.less
@@ -70,7 +70,10 @@
     color: #999;
     height: 1rem;
   }
-
+  .cancle{
+    border: 1px solid #ccc;
+    margin-right: 0.5rem;
+  }
 }
 .cart-checkout{
   position: absolute;
