--- a/public/style/mobile/cart.css
+++ b/public/style/mobile/cart.css
@@ -69,6 +69,10 @@
   color: #999;
   height: 1rem;
 }
+.cart .cancle {
+  border: 1px solid #ccc;
+  margin-right: 0.5rem;
+}
 .cart-checkout {
   position: absolute;
   bottom: 0;
