--- a/public/less/mobile/modal.less
+++ b/public/less/mobile/modal.less
@@ -1,13 +1,15 @@
 .ui-modal{
   display: none;
   width: 10.12rem;
-  height: 4.3rem;
+  // height: 4.3rem;
   background: #fff;
   border-radius: 3px;
   padding: 0.5rem 0.25rem;
-  position: fixed;
-  // top: 50%;
-  // left: 50%;
+  position: absolute;
+  z-index: 99999;
+  // position: fixed;
+  top: 50%;
+  left: 50%;
   -webkit-transform: translate(-50%,-50%);
   -o-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
@@ -20,4 +22,11 @@
     min-height: 34px;
     text-align: center;
   }
+}
+.mask{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 99998;
+  background: rgba(0, 0, 0, 0.5);
 }
