--- a/public/style/global.css
+++ b/public/style/global.css
@@ -861,6 +861,10 @@ header.bar.bar-nav form .search-btn {
   color: #999;
   height: 1rem;
 }
+.cart .cancle {
+  border: 1px solid #ccc;
+  margin-right: 0.5rem;
+}
 .cart-checkout {
   position: absolute;
   bottom: 0;
@@ -896,11 +900,13 @@ header.bar.bar-nav form .search-btn {
 .ui-modal {
   display: none;
   width: 10.12rem;
-  height: 4.3rem;
   background: #fff;
   border-radius: 3px;
   padding: 0.5rem 0.25rem;
-  position: fixed;
+  position: absolute;
+  z-index: 99999;
+  top: 50%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -913,4 +919,11 @@ header.bar.bar-nav form .search-btn {
 .ui-modal .action {
   min-height: 34px;
   text-align: center;
+}
+.mask {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 99998;
+  background: rgba(0, 0, 0, 0.5);
 }
