--- a/public/style/mobile/modal.css
+++ b/public/style/mobile/modal.css
@@ -1,11 +1,13 @@
 .ui-modal {
   display: none;
   width: 10.12rem;
-  height: 4.3rem;
   background: #fff;
   border-radius: 3px;
   padding: 0.5rem 0.25rem;
-  position: fixed;
+  position: absolute;
+  z-index: 99999;
+  top: 50%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -18,4 +20,11 @@
 .ui-modal .action {
   min-height: 34px;
   text-align: center;
+}
+.mask {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 99998;
+  background: rgba(0, 0, 0, 0.5);
 }
