--- a/app/views/mobile/shoppingcart/index.jade
+++ b/app/views/mobile/shoppingcart/index.jade
@@ -39,7 +39,7 @@ block content
       .modal-content
         p.content-p 确定要删除该商品吗
       .action
-        span.ui-btn.ui-btn-white.cancle 取消
+        span.ui-btn.ui-btn-white.cancle.j-cancle 取消
         span.ui-btn.ui-btn-pink.confirm.j-confirm 确定
 block scripts
   script(src="/js/action.js")
