--- a/app/views/admin/product_management/index.jade
+++ b/app/views/admin/product_management/index.jade
@@ -25,7 +25,7 @@ block content
                 .imgbox
                   img(src="#{product.pics}")
               td
-                a(href='admin/product') #{product.name}
+                a(href='admin/product/#{product._id}') #{product.name}
               td
                 span 夏季
                 span 衬衫
