--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -7,24 +7,190 @@ block content
       .form-group
         label 商品名称
         .input-box
-          input#name.required(type='text',name='product[name]')
+          input#name.required(type='text',name='product[name]',value="#{product.name}")
       .form-group.textarea
         label 简述
         .input-box.area-box
-          textarea#desc.required(type='text',name='product[desc]')
+          textarea#desc.required(type='text',name='product[description]',value="#{product.description}")
       .form-group
         label 单价
         .input-box
-          input#price.required(type='text',name='product[price]')
+          input#price.required(type='text',name='product[price]',value="#{product.price}")
       .form-group
         label 折扣
         .input-box
-          input#discount.required(type='text',name='product[discount]')
-      .form-group
-        label 尺寸
-        .input-box
-          input#size.required(type='text',name='product[size]')
-      .form-group
-        label 颜色
-        .input-box
-          input#colors.required(type='text',name='product[colors]')
+          input#discount.required(type='text',name='product[discount]',value="#{product.discount}")
+      each size,index in product.size
+        .form-group
+          label 尺寸
+          .input-box
+            input#size.required(type='text',name='product[size]',value="#{size}")
+            if index > 0
+              a.delete.j-delete(href="javascript:;")
+                i.fa.fa-trash
+            else
+              a.newsize.j-newInput(href="javascrip:void(0);",data-name="size")
+                i.fa.fa-plus
+                | 添加尺寸
+      each color,index in product.color
+        .form-group
+          label 颜色
+          .input-box
+            input#colors.required(type='text',name='product[colors]',value="#{color}")
+            if index > 0
+              a.delete.j-delete(href="javascript:;")
+                i.fa.fa-trash
+            else
+              a.newsize.j-newInput(href="javascrip:void(0);",data-name="color")
+                i.fa.fa-plus
+                | 添加颜色
+
+block scripts
+  script#newInput(type="text/tmpl").
+    <div class="form-group j-form-group">
+      <label></label>
+      <div class="input-box">
+        <input class="sizetext" type="text" name="">
+      </div>
+      <a href="javascript:void(0);" class="delete j-delete">
+        <i class="fa fa-trash"></i>
+      </a>
+    </div>
+  script.
+    $(function(){
+
+      //- 新尺寸
+      (function(){
+        function newInput(name,target,$this){
+          var newInput = $($('#newInput').html());
+          newInput.find('input').attr('name','product['+name+']');
+          $($this).parents(target).append(newInput);
+        }
+
+        function removeInput(){
+          $(this).parents('.j-form-group').remove();
+        }
+
+        $('.j-newInput').on('click',function(){
+          var name = $(this).data('name');
+          var target = '.j-form-box';
+          newInput(name,target,$(this));
+        });
+
+        $('.form-box').on('click','.j-delete',removeInput);
+      })();
+
+      //- 图片上传预览
+      function uploadPic(){
+        function checkType(picPath){
+          var type = picPath.substring(picPath.lastIndexOf('.')+1,picPath.length).toLowerCase();
+          if( type != 'jpg' && type != 'bmp' && type != 'gif' && type != 'png'){
+           return false;
+          }
+          return true;
+        }
+        function previewPic(picURL,$this){
+          var type = checkType(picURL);
+          var prevDiv = $('.pic-wrap');
+          if(type){
+            if( $this.context.files && ($this.context.files)[0] ){
+              var reader = new FileReader();
+              reader.onload = function(evt){
+                var newImg = $('<div class="imgbox"><img src="'+evt.target.result+'" /><i class="icon">&times;</i></div>');
+                prevDiv.append(newImg);
+              }
+              reader.readAsDataURL(($this.context.files)[0]);
+            }else{
+              prevDiv.append('<div class="img" style="filter:progid:DXImagesTransform.Microsoft.AlphaImageLoader(sizingMethod=scale,src=\''+file.value+'\'"></div>');
+            }
+          }
+        }
+        $('.newpic').on('click',function(){
+          var file = $('input[type="file"]');
+          if(file.length == 1){
+            file.trigger('click');
+          }else{
+            $(file[1]).trigger('click');
+          }
+        });
+        $(document).on('change','input[type="file"]',function(){
+          var self = $(this);
+          previewPic(self.val(),self);
+          var newpic = $('<input type="file" name="picture" accept="image/*" class="hide" />')
+          self.parent().append(newpic);
+          validate();
+        });
+        $(document).on('click','.imgbox .icon',function(){
+          var self = $(this),i=0;
+          var imgboxes = $(this).parent().siblings();
+          for(i,len=imgboxes.length;i<len;i++){
+            if($(imgboxes[i]).has(self)){
+              break;
+            }
+          }
+          $($('input[type="file"]')[i]).remove();
+          $(this).parent().remove();
+        })
+      }
+      uploadPic();
+      //- 确定新增商品
+      $('.next').on('click',function(){
+        if($(this).hasClass('disabled')){
+          var ipts = Array.prototype.slice.call($('#newproduct .required'));
+          ipts.forEach(function(ipt){
+            if($(ipt).val().length == 0){
+              $(ipt).addClass('err');
+            }
+          });
+        }else{
+          var ipts = Array.prototype.slice.call($('input.rqrednum'));
+          var pattern = /[^\d]/g;
+          var isnum = true;
+          ipts.forEach(function(ipt){
+            if($(ipt).val() != 0 && pattern.test($(ipt).val())){
+              isnum = false;
+            }
+          });
+          if(isnum){
+            $('#newproduct').trigger('submit');
+          }
+        }
+      });
+
+      //- validate
+      $('#newproduct').on('keyup','.required',validate);
+
+      function validate(){
+        var isAllow = Array.prototype.slice.call($('#newproduct .required')).every(function(input){
+          if($(input).val().length>0){
+            $(input).removeClass('err');
+          }
+          return $(input).val().length > 0;
+        });
+        console.log(isAllow);
+        if(isAllow){
+          $('.modal-footer .next').removeClass('disabled');
+        }
+      }
+
+      //- delete product
+      function deleteProduct(){
+        var _id = $(this).parent().data('product_id');
+        var $this = $(this);
+
+        $.ajax({
+          url: 'product/delete',
+          type: 'POST',
+          dataType: 'json',
+          data: {_id: _id},
+          success: function(data){
+            if(data.success){
+              $this.parents('.j-productItem').remove();
+            }
+          }
+        })
+      }
+
+      $('.j-product-list').on('click','.j-delete',deleteProduct);
+
+    })
