--- a/app/views/includes/admin-footer.jade
+++ b/app/views/includes/admin-footer.jade
@@ -1,2 +1,3 @@
-script(type="text/javascript",src="/js/jquery-1.12.0.min.js")
-script(type="text/javascript",src="/js/bootstrap.min.js")
+script(type="text/javascript",src="/js/admin/jquery-1.12.0.min.js")
+script(type="text/javascript",src="/js/admin/bootstrap.min.js")
+script(type="text/javascript",src="/js/admin/admin.js")
