--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -1,3 +1,3 @@
-script(type="text/javascript",src="/js/zepto.min.js")
-script(type="text/javascript",src="/js/sm.min.js")
-script(type="text/javascript",src="/js/main.js")
+script(type="text/javascript",src="/js/mobile/zepto.min.js")
+script(type="text/javascript",src="/js/mobile/sm.min.js")
+script(type="text/javascript",src="/js/mobile/mobile.js")
