--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -8,6 +8,6 @@
 
 @import './pc/product_management.less';
 
-
 @import './pc/new-product.less';
 @import './pc/userlist.less';
+@import './pc/edit_product.less';
