--- a/app/views/admin/login.jade
+++ b/app/views/admin/login.jade
@@ -17,7 +17,7 @@ html
             .login-wrap.wrap
               h2 登录
               form(method="POST",action="/user/signin")
-                input.username(name="user[name]",type="text",placeholder="登录邮箱")
+                input.username(name="user[name]",type="text",placeholder="登录邮箱",autofocus)
                 input.pwd(name="user[password]",type="password",placeholder="密码")
                 button(type="submit") 登录
                 a.forgetpwd(href="") 忘记密码
