--- a/public/less/pc/edit_product.less
+++ b/public/less/pc/edit_product.less
@@ -8,3 +8,15 @@
     margin-right: 10px;
   }
 }
+.edit-page{
+  .labels{
+    padding: 3px 10px;
+    border: 1px solid #999;
+    border-radius: 3px;
+    cursor: pointer;
+    &.selected{
+      border-color: #709ef9;
+      color: #709ef9;
+    }
+  }
+}
