--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -7,6 +7,7 @@
 @import './pc/login.less';
 
 @import './pc/product_management.less';
+@import './pc/dropdown.less';
 
 @import './pc/new-product.less';
 @import './pc/userlist.less';
