--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -7,7 +7,7 @@ block content
       .form-group
         label 商品名称
         .input-box
-          input(type="hidden",name="product[id]",value="#{product._id}")
+          input(type="hidden",name="product[_id]",value="#{product._id}")
           input#name.required(type='text',name='product[name]',value="#{product.name}")
       .form-group.textarea
         label 简述
