--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -61,7 +61,7 @@ block content
       .form-group
         label 标签
         div.label-group.j-label-group
-          input.input(type="hidden",name="product[labels]",value="")
+          input.input(type="hidden",name="product[labels]",value="#{product.labels.join(' ')}")
           div.self-dropdown
             span.labels.dropdown-toggle#newlabels
               i.glyphicon.glyphicon-plus
@@ -73,6 +73,10 @@ block content
               .footer
                 button.btn.btn-primary.j-ok 确定
                 a.btn.btn-default.j-cancle(href="javascript:;") 取消
+          each label in product.labels
+            span.labels.j-selected_lb
+              span #{label}
+              i.glyphicon.glyphicon-remove
   .footer
     button.btn.btn-primary.confirm.j-confirm 确定
     a.btn.btn-default(href="/admin") 取消
