--- a/app/views/mobile/home/index.jade
+++ b/app/views/mobile/home/index.jade
@@ -52,7 +52,7 @@ block content
               img(src="")
               p 我的收藏
           li.col-25
-            a(href="/cart")
+            a.external(href="/cart")
               img(src="")
               p 购物车
       .shopin-head
