--- a/app/views/mobile/home/index.jade
+++ b/app/views/mobile/home/index.jade
@@ -52,7 +52,7 @@ block content
               img(src="")
               p 我的收藏
           li.col-25
-            if !!auth_url
+            if auth_url
               a.external(href="#{auth_url}")
               img(src="")
               p 购物车
