search pannel style

--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -3,6 +3,6 @@ header.bar.bar-nav
     img(src="images/wap_logo.png")
   form#search_form
     .search
-      input(type="text",name="keywords",placeholder="请输入搜索关键字：")
+      input.open-popup(type="text",name="keywords",placeholder="请输入搜索关键字：")
       a.fa.fa-search.search-btn(href="javascript:;")
   span.fa.fa-list-ul.badget.open-panel(data-panel="#subfield-panel")
