--- a/public/less/mobile/public.less
+++ b/public/less/mobile/public.less
@@ -125,3 +125,8 @@ input[type=checkbox],input[type=radio]{
     margin: 0rem;
   }
 }
+
+.popup-overlay.modal-overlay-visible{
+  visibility: hidden;
+  display: none !important;
+}
