--- a/public/less/global.less
+++ b/public/less/global.less
@@ -7,6 +7,7 @@
 @import './mobile/header.less';
 
 @import './mobile/home.less';
+@import './mobile/_search.less';
 @import './mobile/list.less';
 
 @import './mobile/details.less';
