--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -547,8 +547,10 @@ body {
   position: relative;
 }
 .self-dropdown .dropdown-menu {
-  display: none;
-  width: 300px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin: 3px 0 0;
 }
 .modal .modal-header {
   width: 100%;
