--- a/public/style/mobile/public.css
+++ b/public/style/mobile/public.css
@@ -137,3 +137,7 @@ input[type=radio] {
 .ui-confirm .action {
   margin: 0rem;
 }
+.popup-overlay.modal-overlay-visible {
+  visibility: hidden;
+  display: none !important;
+}
