--- a/app/views/mobile/home/_search.jade
+++ b/app/views/mobile/home/_search.jade
@@ -1,7 +1,7 @@
 .popup.popup-search
   .search_box
     input(type="text",placeholder="请输入搜索关键词")
-  .class_pannel
+  .class_pannel.j_class_pannel
     a.labels.red(href="") 连衣裙
     a.labels.blue(href="") 半身裙
     a.labels.green(href="") T恤
