close search-popup function

--- a/app/views/mobile/home/_search.jade
+++ b/app/views/mobile/home/_search.jade
@@ -1,4 +1,4 @@
-.popup.popup-search
+.popup.popup-search.j-popup-search
   .search_box
     input(type="text",placeholder="请输入搜索关键词")
   .class_pannel.j_class_pannel
